# requests-html

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .requests_html.py.swp  .travis.yml  CNAME  Makefile  Pipfile  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requests_html.py  requests_qczj  search.html  searchindex.js  setup.py
.github/workflows/: publish.yml  python-app.yml  run_test.yml
_modules/: index.html  requests_html.html
_modules/requests/: sessions.html
_sources/: index.rst.txt
_static/: alabaster.css  documentation_options.js
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/_templates/: hacks.html  sidebarintro.html  sidebarlogo.html
ext/: requests-html-logo.ai
requests_html/: __init__.py  globals.py  html_response.py  parsers.py  sessions.py  typing.py
requests_html_playwright/: requests_html.py
src/: requests_html.py
tests/: hn-sample.html  python.html  test_internet.py  test_requests_html.py
