[tool.poetry]
name = "requests-html-playwright"
version = "0.10.1"
description = ""
authors = ["Asugawara <asgasw@gmail.com>"]
readme = "README.rst"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.29.0"
pyquery = "^2.0.0"
fake-useragent = "^1.1.3"
parse = "^1.19.0"
bs4 = "^0.0.1"
w3lib = "^2.1.1"
rfc3986 = "^2.0.0"
playwright = "^1.32.1"
pytest-playwright = "^0.3.3"


[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"
requests-file = "^1.5.1"
pytest = "^7.3.1"
sphinx = "^7.0.0"
mypy = "^1.2.0"
pytest-asyncio = "^0.21.0"
white = "^0.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
