[tool.poetry]
name = "requests-html-playwright"
version = "0.11.0"
description = "Requests-HTML(with microsoft/playwright-python): HTML Parsing for Humans™"
authors = ["Asugawara <asgasw@gmail.com>"]
readme = "README.rst"
packages = [{include = "src"}]
homepage = "https://github.com/Asugawara/requests-html-playwright"
repository = "https://github.com/Asugawara/requests-html-playwright"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.29.0"
pyquery = "^2.0.0"
fake-useragent = "^1.1.3"
parse = "^1.19.0"
bs4 = "^0.0.1"
w3lib = "^2.1.1"
rfc3986 = "^2.0.0"
playwright = "^1.32.1"


[tool.poetry.group.dev.dependencies]
requests-file = "^1.5.1"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-playwright = "^0.3.3"
mypy = "^1.2.0"
black = "^23.3.0"
lxml-stubs = "^0.4.0"
types-requests = "^2.29.0.0"
pre-commit = "^3.3.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
