[tool.poetry]
name = "requests-html-playwright"
version = "0.12.0"
description = "Requests-HTML(with microsoft/playwright-python): HTML Parsing for Humans™"
authors = ["Asugawara <asgasw@gmail.com>"]
readme = "README.md"
packages = [{include = "requests_html_playwright"}]
homepage = "https://github.com/Asugawara/requests-html-playwright"
repository = "https://github.com/Asugawara/requests-html-playwright"
license = "MIT"
keywords = [
  "requests-html",
  "playwright"
]
classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: Implementation :: PyPy"
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
pyquery = "^2.0.0"
fake-useragent = "^1.3.0"
parse = "^1.19.0"
w3lib = "^2.1.1"
rfc3986 = "^2.0.0"
playwright = "^1.39.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
requests-file = "^1.5.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.0"
pytest-playwright = "^0.3.3"
pytest-cov = "^4.1.0"
mypy = "^1.7.0"
black = "^23.11.0"
lxml-stubs = "^0.4.0"
types-requests = "^2.31.0.0"
pre-commit = "^3.5.0"
isort = "^5.12.0"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = [
    "fake_useragent.*",
    "parse.*",
    "pyquery.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
